--- a/website/style.css
+++ b/website/style.css
@@ -1,14 +1,12 @@
-body{
+body {
+    margin: 0;
     background: #fffff8;
+    background: #f23557;
     font-family: -apple-system, BlinkMacSystemFont, sans-serif;
 }
 
-#app{
+#app {
     display: grid;
-    grid-auto-rows: minmax(150px, auto);
-    /* grid-template-columns:  */
-    height:100vh;
-    background: #f23557;
     color: #f0d43a;
     justify-content: center;
     grid-gap: 1em;
@@ -16,56 +14,59 @@ body{
     font-family: 'Oswald', sans-serif;
 }
 
-.holder{
+.holder {
 
 }
 
-.entry{
+.entry {
     background: rgba(59, 74, 107, .4);
+    padding: 10px;
 }
 
-#entryHolder{
-
-}
-
-#date{
+#entryHolder {
 
 }
 
-#temp{
+#date {
 
 }
 
-#content{
+#temp {
 
 }
 
-.headline {
+#content {
 
 }
-.title{
+
+.headline  {
+
+}
+
+.title {
 
 }
 
 /*  Basic Styling To Override Default For Basic HTML Elements */
-label{
+label {
     display:block;
     font-size: 27px;
 }
 
-input{
+input {
     display:block;
-    height: 60px;
-    width: 320px;
+    width: 100%;
     background:#22b2da;
     color: #f0d43a;
     font-size: 20px;
+    padding: 10px;
     font-family: 'Oswald', sans-serif;
     border: none;
+    box-sizing: border-box;
 }
 
-button{
-    width: 400px;
+button {
+    width: 100%;
     height: 100px;
     background: #3b4a6b;
     color: #f0d43a;
@@ -73,17 +74,21 @@ button{
     font-family: 'Oswald', sans-serif;
     border: none;
     box-shadow: 2px 4px 5px #444;
+    cursor: pointer;
 }
-h1{
+
+h1 {
     font-size: 36px;
 }
 
-textarea{
+textarea {
     background:#22b2da;
     color: #f0d43a;
     font-size: 20px;
+    padding: 10px;
     font-family: 'Oswald', sans-serif;
 }
+
 /* Reset style for HTML element on active to have no border*/
 input:focus,
 select:focus,
@@ -91,6 +96,7 @@ textarea:focus,
 button:focus {
     outline: none;
 }
+
 /* Style for Placeholder Text*/
 ::placeholder { /* Firefox, Chrome, Opera */ 
     color: #f0d43a; 
